--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
