--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.13",
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "eslint-config-next": "^13.4.9",
     "jsonwebtoken": "^9.0.0",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.4.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "prisma": "^4.11.0"
